# spectyra

./: .gitignore  .gitleaks.toml  .npmrc  .vercelignore  APPLICATION_DESCRIPTION.md  APP_CURRENT_STATUS_AND_TODO.md  BOOTSTRAP_EXISTING_USER.md  COMPLIANCE_ARCHITECTURE.md  COMPONENT_REFACTORING_COMPLETE.md  COMPONENT_REFACTORING_PROGRESS.md  COMPONENT_REFACTORING_SUMMARY.md  DEBUG_AUTH_ME_CALLS.md  ENV_VARS_SETUP.md  HOW_REQUESTS_FORWARD_TO_PROVIDERS.md  HOW_TO_FIND_DATABASE_URL.md  HOW_TO_FIX_SUPABASE_REDIRECT_URLS.md  LICENSE  QUICKSTART.md  README.md  REFACTOR_COMPONENTS_SCRIPT.md  ROOT_CAUSE_401_ERRORS.md  SDK_REBUILD_COMPLETE.md  SPECTRAL_CORE.md  SUPABASE_ENV_VARS_GUIDE.md  SUPABASE_MIGRATION_STATUS.md  TROUBLESHOOTING_JWT_AUTH.md  TYPE_COLLISIONS.md  TYPE_INDEX.md  USER_GUIDE.md  WEB_UI_VS_PROXY.md  build-vercel.sh  check_user_bootstrap.sql  extract_templates_styles.py  install.sh  netlify.toml  nixpacks.toml  package.json  pnpm-lock.yaml  spectyra-brand.md  spectyra_brand_story.md  (+2 more)
.github/: SECURITY.md
docs/: ADDING_EVENT_ADAPTERS.md  ADDING_NEW_INTEGRATIONS.md  ADMIN_AND_SDK_ACCESS_CONTROL.md  AGENTIC_AND_SERVER_INTEGRATION.md  AGENT_COMPANION_UI_ARCHITECTURE.md  AGENT_RUNTIMES.md  APPLICATION_DESCRIPTION.md  ARCHITECTURE_ADAPTERS.md  CANONICAL_REQUEST_MODEL.md  CLAUDE_AGENT_INTEGRATION.md  CLAUDE_CODE_INTEGRATION.md  CORE_MOAT_V1_IMPLEMENTATION.md  CORE_MOAT_V1_UI_UPDATES.md  (+46 more)
runtime/core-rust/: Cargo.toml
runtime/core-rust/src/: aggregated_telemetry.rs  config.rs  errors.rs  lib.rs  models.rs  pipeline.rs
runtime/core-rust/src/metrics/: session.rs
runtime/core-rust/src/pricing/: cost_calculator.rs  mod.rs  model_resolver.rs  types.rs
runtime/core-rust/src/privacy/: mod.rs
runtime/core-rust/src/quota/: mod.rs
runtime/core-rust/src/telemetry/: mod.rs  types.rs
runtime/core-rust/src/transforms/: mod.rs  noop.rs  phrase_compress.rs  refpack_placeholder.rs
runtime/core-rust/src/usage/: mod.rs
runtime/local-runtime/: Cargo.toml  README.md
runtime/local-runtime/src/: app.rs  config.rs  constants.rs  errors.rs  lib.rs  main.rs  server.rs  state.rs
runtime/local-runtime/src/provider/: anthropic.rs  google.rs  mod.rs  openai.rs  types.rs
runtime/local-runtime/src/routes/: analytics.rs  embeddings.rs  health.rs  metrics.rs  mod.rs  pricing.rs  quota.rs  reload.rs  responses.rs  run_chat.rs  status.rs
runtime/local-runtime/src/services/: analytics_emitter.rs  entitlement_refresh.rs  mod.rs  optimizer.rs  pricing_refresh.rs  run_orchestration.rs
runtime/local-runtime/tests/: http_smoke.rs
runtime/spectyra-ffi/: Cargo.toml
runtime/spectyra-ffi/src/: lib.rs
sdks/python/: README.md  pyproject.toml
sdks/python/src/spectyra/: __init__.py  client.py  config.py  embedded.py  result.py
sdks/python/tests/: test_import.py
(+681 files in other folders)
