[package]
name = "spectyra_core"
version = "0.1.0"
edition = "2021"
description = "Spectyra optimization core: pricing, metrics, quota, privacy-safe telemetry"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
