[package]
name = "spectyra-core"
version = "0.0.1"
edition = "2021"
description = "Shared local optimization primitives; telemetry must stay prompt-free (see src/telemetry.rs)"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
