[package]
name = "spectyra_local_runtime"
version = "0.1.0"
edition = "2021"
description = "Spectyra localhost HTTP runtime for non-Node backends"

[[bin]]
name = "spectyra-runtime"
path = "src/main.rs"

[dependencies]
spectyra_core = { path = "../core-rust" }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
